fix max width on tablet

--- a/src/containers/legend/landcover-legend/styles.module.scss
+++ b/src/containers/legend/landcover-legend/styles.module.scss
@@ -17,8 +17,8 @@
   }
 
   @media #{$tablet-landscape} {
-    bottom: 48px;
-    max-width: 350px;
+    bottom: 38px;
+    max-width: 400px;
   }
 
 
